BUG: fixed background image dimension shift on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -80,6 +80,7 @@
     .dh-screen {
         height: 100vh;
         height: 100dvh;
+        height: 100svh;
     }
 
     /* --- scrollbar style --- */
